[gd_scene load_steps=15 format=3 uid="uid://c557cq0fkyke3"]

[ext_resource type="Script" uid="uid://b6d685ce5kdmp" path="res://Scripts/Windows/answer_input.gd" id="1_083qw"]
[ext_resource type="PackedScene" uid="uid://utagi2eh5w54" path="res://Scenes/Other/titlebar.tscn" id="2_j30vd"]
[ext_resource type="Script" uid="uid://bu4x7bccn1iiu" path="res://Scripts/Resources and Files/Other/qna_resource.gd" id="2_miarm"]
[ext_resource type="Script" uid="uid://ds65yghua76jy" path="res://Scripts/Resources and Files/Other/user_metadata.gd" id="3_31ov4"]
[ext_resource type="PackedScene" uid="uid://bj0ggtv30md6n" path="res://Scenes/Other/answer_confirmation_row.tscn" id="3_op88k"]
[ext_resource type="Resource" uid="uid://cktwl3fs1yab3" path="res://Data and Resources/Users/Endings/special_ending.tres" id="4_31ov4"]
[ext_resource type="Resource" uid="uid://hgrnqm33l6ks" path="res://Data and Resources/Users/Endings/bad_ending.tres" id="5_ojcqa"]
[ext_resource type="Resource" uid="uid://d07jh7dmbhr8a" path="res://Data and Resources/Users/Endings/mid_ending.tres" id="6_wdwg5"]
[ext_resource type="Resource" uid="uid://b6gobob7a4hin" path="res://Data and Resources/Users/Endings/good_ending.tres" id="7_fwepc"]
[ext_resource type="Resource" uid="uid://o43j6qqj6af4" path="res://Data and Resources/Users/Endings/true_ending.tres" id="8_wdwg5"]

[sub_resource type="Resource" id="Resource_xelsm"]
resource_name = "What is your first name? (Use small letters only. Do not leave a trailing space.)"
script = ExtResource("2_miarm")
type = 0
title = "What is your first name?"
correct_answer = "sonu"
submitted_text = ""
option1_text = ""
option2_text = ""
option3_text = ""
option4_text = ""
option5_text = ""
option6_text = ""
correct_option = 0
submitted_option = 0
correct_number = 0
submitted_number = 0
metadata/_custom_type_script = "uid://bu4x7bccn1iiu"

[sub_resource type="Resource" id="Resource_3jc0l"]
resource_name = "Who, in your opinion, had a motive to kill Ranmara Rakesh?"
script = ExtResource("2_miarm")
type = 1
title = "Who, in your opinion, had a motive to kill Ranmara Rakesh?"
correct_answer = ""
submitted_text = ""
option1_text = "Satsu Hito"
option2_text = "Jeremy O'Brien"
option3_text = "Romila Ramesh"
option4_text = "It was a suicide"
option5_text = ""
option6_text = ""
correct_option = 0
submitted_option = 5
correct_number = 0
submitted_number = 0
metadata/_custom_type_script = "uid://bu4x7bccn1iiu"

[sub_resource type="Resource" id="Resource_31ov4"]
resource_name = "As of 27th April 2025, how many people worked at Killer Games?"
script = ExtResource("2_miarm")
type = 2
title = "As of 25th April 2025, how many people worked at Killer Games?"
correct_answer = ""
submitted_text = ""
option1_text = ""
option2_text = ""
option3_text = ""
option4_text = ""
option5_text = ""
option6_text = ""
correct_option = 0
submitted_option = 0
correct_number = 3
submitted_number = 0
metadata/_custom_type_script = "uid://bu4x7bccn1iiu"

[sub_resource type="Resource" id="Resource_p4ejc"]
resource_name = "Who started the rumors about Romila Ramesh?"
script = ExtResource("2_miarm")
type = 1
title = "Who started the rumors about Romila Ramesh?"
correct_answer = ""
submitted_text = ""
option1_text = "Ranmara Rakesh"
option2_text = "Romila Ramesh"
option3_text = "Jeremy O'Brien"
option4_text = "Sonu Rakesh"
option5_text = "Satsu Hito"
option6_text = "None of the above"
correct_option = 4
submitted_option = 0
correct_number = 0
submitted_number = 0
metadata/_custom_type_script = "uid://bu4x7bccn1iiu"

[node name="LawyerLink" type="Panel" node_paths=PackedStringArray("main_input_field", "title_node", "ending_confirmation", "next_button", "previous_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -752.0
offset_bottom = -348.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_083qw")
questions = Array[ExtResource("2_miarm")]([SubResource("Resource_xelsm"), SubResource("Resource_3jc0l"), SubResource("Resource_31ov4"), SubResource("Resource_p4ejc")])
endings_dictionary = Dictionary[PackedInt32Array, ExtResource("3_31ov4")]({
PackedInt32Array(4, 5): ExtResource("8_wdwg5"),
PackedInt32Array(4, 4): ExtResource("7_fwepc"),
PackedInt32Array(4, 3): ExtResource("6_wdwg5"),
PackedInt32Array(4, 2): ExtResource("6_wdwg5"),
PackedInt32Array(4, 1): ExtResource("4_31ov4"),
PackedInt32Array(3, 5): ExtResource("7_fwepc"),
PackedInt32Array(3, 4): ExtResource("7_fwepc"),
PackedInt32Array(3, 3): ExtResource("6_wdwg5"),
PackedInt32Array(3, 2): ExtResource("6_wdwg5"),
PackedInt32Array(3, 1): ExtResource("4_31ov4"),
PackedInt32Array(2, 5): ExtResource("7_fwepc"),
PackedInt32Array(2, 4): ExtResource("6_wdwg5"),
PackedInt32Array(2, 3): ExtResource("6_wdwg5"),
PackedInt32Array(2, 2): ExtResource("5_ojcqa"),
PackedInt32Array(2, 1): ExtResource("4_31ov4"),
PackedInt32Array(1, 5): ExtResource("7_fwepc"),
PackedInt32Array(1, 4): ExtResource("6_wdwg5"),
PackedInt32Array(1, 3): ExtResource("6_wdwg5"),
PackedInt32Array(1, 2): ExtResource("5_ojcqa"),
PackedInt32Array(1, 1): ExtResource("4_31ov4"),
PackedInt32Array(0, 5): ExtResource("6_wdwg5"),
PackedInt32Array(0, 4): ExtResource("6_wdwg5"),
PackedInt32Array(0, 3): ExtResource("5_ojcqa"),
PackedInt32Array(0, 2): ExtResource("5_ojcqa"),
PackedInt32Array(0, 1): ExtResource("4_31ov4")
})
main_input_field = NodePath("Sorter/MarginContainer/Contents/Inputs")
title_node = NodePath("Sorter/MarginContainer/Contents/Question")
ending_confirmation = NodePath("Ending Confirmation")
next_button = NodePath("Sorter/MarginContainer/Contents/Buttons/Front")
previous_button = NodePath("Sorter/MarginContainer/Contents/Buttons/Back")
answer_confirmation_row = ExtResource("3_op88k")
starting_size = Vector2(400, 300)
window_icon_name = &"police_radio"

[node name="Sorter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titlebar" parent="Sorter" instance=ExtResource("2_j30vd")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Sorter"]
layout_mode = 2
size_flags_vertical = 3

[node name="Contents" type="VBoxContainer" parent="Sorter/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Question" type="Label" parent="Sorter/MarginContainer/Contents"]
layout_mode = 2
text = "What is your worst memory?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Inputs" type="Control" parent="Sorter/MarginContainer/Contents"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Sorter/MarginContainer/Contents"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="Sorter/MarginContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Previous Question"

[node name="Front" type="Button" parent="Sorter/MarginContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Question"

[node name="Ending Confirmation" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -100.0
offset_right = 187.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Ending Confirmation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sorter" type="VBoxContainer" parent="Ending Confirmation/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Ending Confirmation/MarginContainer/Sorter"]
layout_mode = 2
text = "End your investigation now?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Ending Confirmation/MarginContainer/Sorter"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Ending Confirmation/MarginContainer/Sorter"]
layout_mode = 2
size_flags_vertical = 3

[node name="Answer Row Sorter" type="VBoxContainer" parent="Ending Confirmation/MarginContainer/Sorter/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons Container" type="HBoxContainer" parent="Ending Confirmation/MarginContainer/Sorter"]
layout_mode = 2

[node name="No" type="Button" parent="Ending Confirmation/MarginContainer/Sorter/Buttons Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Take me back."

[node name="Yes" type="Button" parent="Ending Confirmation/MarginContainer/Sorter/Buttons Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "I am sure."

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Sorter/MarginContainer/Contents/Buttons/Back" to="." method="go_back"]
[connection signal="pressed" from="Sorter/MarginContainer/Contents/Buttons/Front" to="." method="progress_question"]
[connection signal="pressed" from="Ending Confirmation/MarginContainer/Sorter/Buttons Container/No" to="Ending Confirmation" method="hide"]
[connection signal="pressed" from="Ending Confirmation/MarginContainer/Sorter/Buttons Container/Yes" to="." method="ending_confirmed"]
